not done with part2

--- a/templates/tv_shows.html
+++ b/templates/tv_shows.html
@@ -1,1 +1,16 @@
-Parse the Json string in app.py to replace this text!
+<html>
+<p>
+	{%for i in shows%}
+	{{i['url']}}
+	<br>
+	{{i['name']}}
+	<br>
+	{{i['language']}}
+	<br>
+	{{i['genres']}}
+	<br>
+	{%endfor%}
+
+	
+</p>
+</html>
